# Projeto_Integrador

./: README.md
2021 - Semestre 1/Análise e Desenvolvimento de Sistemas/6°/(Equipe 2) API_APP/API_Documentation/jupyter_notebook/: dataset_v01.csv  pyproject.toml
Frontend/: ADS.html  ADS2020.html  ADS2021.html  BD.html  BD2020.html  BD2021.html  Códigos site.rar  DSM.html  DSM2021.html  Inicial.html  LOG.html  LOG2020.html  LOG2021.html  MA.html  MA2020.html  MA2021.html  MAV.html  MAV2020.html  MAV2021.html  MNTA2020.html  MNTA2021.html  PInicial.html  css.css  estilos.css  index.html
Relatórios/Sprint 1/: README.md
Relatórios/Sprint 2/: README.md
Relatórios/Sprint 3/: README.md
Relatórios/Sprint 4/: README.md
TURMA_2020_1_3ADS-A/EngSoft2/: README.md
TURMA_2020_1_3ADS-A/IGN-II_GSW/: Status operacionais e histórico de entregas.txt
TURMA_2020_1_3ADS-A/ProjectESWII/: README.md
TURMA_2020_1_3ADS-A/eng_soft2_fatec/: .env_example  .gitignore
TURMA_2020_2_1BD/projeto-integrador/: README.md  Sprint3_VandroidAPP.aia
TURMA_2020_2_1BD/projeto_integrador_coffeend/: README.md
TURMA_2020_2_1BD/vaidevan/: README.md
TURMA_2021_1_5ADS/API-SPC/: README.md
TURMA_2021_1_5ADS/API1/: README.md  _footer.php  alteradmin.php  cadastro_login.php  comoajudar.php  conexao_login.php  conexao_participantes.php  contato.php  contato_msg.sql  doacao.php  pag_login.php  painel.php  participantes.php  processa_contato.php  processa_doacao.php  processa_especifico.php  processa_login.php  processa_participantes.php  processa_proj1.php  processa_proj2.php  saibamais.php  (+9 more)
(+5385 files in other folders)
